# aviation_calclator

./: Cargo.toml
src/: altimeter_calclator.rs  descent_calclator.rs  late_calclator.rs  metar.rs
